Add GitHub Actions workflow for .NET app deployment to Azure

--- a/src/ZavaStorefront.csproj
+++ b/src/ZavaStorefront.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>344e5e8b-9c43-4a93-8c01-40c3fa230e9b</UserSecretsId>
   </PropertyGroup>
 
 </Project>
